@startuml
hide empty members

package iodelegates {
    class DigitalPin
    class Button
    class Motor
}

package physical {
    class IOresources {
        adaptor : IOadaptor
    }
    hide IOresources attributes
    interface IOadaptor
    interface IOdelegate {
        Start(IOadaptor, chan<- string, chan<- error) error
        Modified(IOadaptor, string, Resources, chan<- error) *Resources
    }
    IOresources o-- "1" IOadaptor
    IOdelegate "*" -* IOresources
}

package ecarule {
    class Rule
    class RuleDict
}

package memory {
    interface ResourceController {
        Start() error
	    Inputs() <-chan string
        Errors() <-chan error
	    Modified(string) error
	    HasDuplicates() bool
	    Has(string) bool
	    Types() map[string]string
	    GetResources() Resources
	    ResourceNames() []string
	    InputsNumber() int
	    String() string
	    Copy() ResourceController
    }
    class Resources {
        Bool : string->bool
	    Integer : string->int64
	    Float : string->float64
	    Text : string->string
	    Time : string->time.Time
	    Other : string->interface{}
    }
    RuleDict o-- "*" Rule
    Resources ..|> ResourceController
    ResourceController -- Resources
}

package steel {
    class State {
        Memory : Resources
	    Pool : []Update
    }
    class Executer {
        memory : ResourceController
        pool : []Update
        agent : Agent
        localLibrary : string->RuleDict
        globalLibrary : string->RuleDict

        TakeState() State
        DoIfStable(func ()) bool
        Exec()
        Input(string) error

        StartAgent() error
        StopAgent() error
        SetAgent(Agent) error
        HasRule(string) bool
        AddRules(...string) error
        LogLevel() int
        SetLogLevel(int)
        HasOptimisticExec() bool
        HasOptimisticInput() bool
        SetOptimisticExec(bool)
        SetOptimisticInput(bool)
    }
    hide Executer attributes
    interface Agent {
        Start() error
	    Join() error
	    ForAll([]byte) error
	    ReceivedActions() (<-chan chan []byte, <-chan chan string)
	    Stop() error
	    IsRunning() bool
    }
    class Assignment {
        Resource : string
        Value : Value
    }
    class externalAction

    Executer "1" o-- "1" Agent
    Executer *-- "*" Assignment
    Executer -- externalAction
    Executer -- State
}

package communication {
    class MemberlistAgent
    class transactionInfo {
	    Initiator : string
	    Number : int
	    Payload : []byte
	    Partecipants : []string
	    stopMonitor : chan bool
	    coordinated : bool
	    commands : chan string
    }
    MemberlistAgent o-- "1" transactionInfo
}

DigitalPin ..|> IOdelegate
Button ..|> IOdelegate
Motor ..|> IOdelegate

IOresources ..|> ResourceController
IOresources --|> Resources

Executer "1" o-- "1" ResourceController
Executer "1" o-- "2" RuleDict
Executer -- Rule

MemberlistAgent ..|> Agent
@enduml
